[package]
name = "gloryctl"
version = "0.1.2"
authors = ["Samuel Čavoj <samuel@cavoj.net>"]
edition = "2018"

[dependencies]
nom = "5.1.2"
num_enum = "0.5.1"
anyhow = "1.0.38"
arrayvec = "0.5.2"
#clap = { git = "https://github.com/clap-rs/clap/" }

    [dependencies.hidapi]
    version = "1.2.5"
    features = ["linux-static-hidraw"]
    default-features = false
