[package]
name = "gloryctl"
version = "0.1.2"
authors = ["Samuel Čavoj <samuel@cavoj.net>"]
edition = "2018"

[dependencies]
nom = "6.1.2"
num_enum = "0.5.1"
anyhow = "1.0.40"
arrayvec = "0.5.2"
clap = "3.0.0-beta.2"
hex = "0.4"

[dependencies.hidapi]
version = "1.2.6"
features = ["linux-static-hidraw"]
default-features = false
